[package]
name = "tushare"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["tushare", "chinese_stock_data"]
categories = ["api-bindings"]
description = "A rust library to read the data tushare and tranform it into polars dataframe object"
readme = "README.md"
repository = "https://github.com/leonchen2012/tushare"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
polars = { version = "0.39.2", features = ["lazy", "json"] }
reqwest = { version = "0.12.4", features = ["blocking"]}
serde_json = "1.0.116"
thiserror = "1.0.59"
